# CSC4005-As4-Heat-Simulation

./: .gitignore  CMakeLists.txt  build.sh  get_logs.sh  mpi_sbatch.sh  omp_sbatch.sh  pthread_sbatch.sh  release_build.sh  to_server.sh
include/hdist/: hdist.cuh  hdist.hpp
result/: report.ipynb
src/: cuda.cu  cuda_gui.cpp  cuda_gui.cu  mpi.cpp  mpi_gui.cpp  omp.cpp  omp_gui.cpp  pthread.cpp  pthread_gui.cpp  sequential_gui.cpp
